draft: playlist, player, singerlist, searchresult

--- a/source/database/SConscript
+++ b/source/database/SConscript
@@ -1,6 +1,14 @@
 Import("env")
 VariantDir('build', 'source', duplicate=0)
-src_files = Split("""test_database.cpp database.cpp sqlite3.c""")
+src_files = Split("""
+                    test_database.cpp
+                    database.cpp
+                    sqlite3.c
+                    ../log/log.cpp
+                    ../ipc/ipc.cpp
+                    ../ptasking/ptasking.cpp
+                    ../cli/cli.cpp
+                  """)
 
 test_database = env.Program('test_database',src_files)
 env.Install("#build", test_database)
